Prevent page breaks in coverage-table

--- a/forms-common.css
+++ b/forms-common.css
@@ -34,6 +34,7 @@ body {
   margin: 0 auto;
   border: none;
   border-collapse: collapse;
+  page-break-inside: avoid;
 }
 
 .coverage-table th {
